ingress/ing_task7.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-default-backend
  labels:
    app: sorry-page
---
#--default-backend-service=ingress-default-backend/sorry-page-service
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sorry-page
  name: sorry-page-service
  namespace: ingress-default-backend
spec:
  type: ClusterIP
  selector:
    app: sorry-page
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-default-backend
  name: sorry-page
  labels:
    app: sorry-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sorry-page
  template:
    metadata:
      labels:
        app: sorry-page
    spec:
      containers:
      - image: sbeliakou/http-sorry-page
        name: main
        ports:
        - containerPort: 80
