ingress/ing_task1.yaml
apiVersion: v1
kind: Service
metadata:
  name: aqua-svc
spec:
  type: ClusterIP
  selector:
    color: aqua
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: maroon-svc
spec:
  type: ClusterIP
  selector:
    color: maroon
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: olive-svc
spec:
  type: ClusterIP
  selector:
    color: olive
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aqua-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: aqua.k8slab.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aqua-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maroon-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: maroon.k8slab.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: maroon-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: olive-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: olive.k8slab.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: olive-svc
            port:
              number: 80
