ingress/ing_task2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colors-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: olive-svc
      port:
        number: 80
  rules:
  - host:  colors.k8slab.net
    http:
      paths:
      - path: /aqua
        pathType: Prefix
        backend:
          service:
            name: aqua-svc
            port:
              number: 80
      - path: /maroon
        pathType: Prefix
        backend:
          service:
            name: maroon-svc
            port:
              number: 80
