ingress/ing_task4.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  generation: 1
  name: trouble-1-ingress
  namespace: trouble-1
spec:
  ingressClassName: nginx
  rules:
  - host: trouble-1.k8slab.net
    http:
      paths:
      - backend:
          service:
            name: lime-svc
            port:
              number: 8080
        path: /lime
        pathType: ImplementationSpecific
      - backend:
          service:
            name: purple-svc
            port:
              number: 8080
        path: /purple
        pathType: ImplementationSpecific
